@@ -28,7 +28,7 @@ float ExecutiveDist(char *nam,char *s1,char *s2,int mode,float cutoff);
 void ExecutiveBond(char *s1,char *s2,int order,int add);
 int ExecutiveIterate(char *s1,char *expr,int read_only);
 void ExecutiveLabel(char *s1,char *expr);
-void ExecutiveIterateState(int i1,char *s1,char *expr,int read_only);
+void ExecutiveIterateState(int i1,char *s1,char *expr,int read_only,int atomic_props);
 int ExecutiveColor(char *name,char *color,int flags);
 void ExecutiveInit(void);
 void ExecutiveFree(void);
